--- a/_includes/catalogue_item.html
+++ b/_includes/catalogue_item.html
@@ -1,7 +1,7 @@
 <a href="{{ post.url | prepend: site.baseurl }}" class="catalogue-item">
   <div>
     {% if include.sticky == 'true' %}
-    <span class="catalogue-pinned">Pinned &middot;</span>
+    <span class="catalogue-pinned">Angeheftet &middot;</span>
     {% endif %}
     <time datetime="{{ post.date }}" class="catalogue-time">{{ post.date | date: "%d. %B %Y" }}</time>
     <h1 class="catalogue-title">{{ post.title }}</h1>
