--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 <div class="catalogue">
+  {% include date-german.html %}
   {% for post in site.posts %}
     {% if post.sticky %}
       {% include catalogue_item.html sticky='true' %}
