--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,8 @@ layout: default
     {% if page.date %}
     {% include date-german.html %}
       <br>
-      <span>on&nbsp;</span><time datetime="{{ page.date }}">{{ page.date | date: "%d. %B %Y" }}</time>
+      <span>on&nbsp;</span><time datetime="{{ page.date }}">{{ page.date | date: "%d. %B %Y" }}{% include date-german.html %}</time>
+    {% include date-german.html %}
     {% endif %}
   </div>
 
