--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,18 +12,12 @@ layout: default
     {% else %}
         {{ site.author.name }}
     {% endif %}
-    
-    {% include date-german.html %}
 
     {% if page.date %}
-    {% include date-german.html %}
       <br>
-      <span>on&nbsp;</span>{% include date-german.html %}<time datetime="{{ page.date }}">{% include date-german.html %}{{ page.date | date: "%d. %B %Y" }}{% include date-german.html %}</time>
-    {% include date-german.html %}
+      <span>on&nbsp;</span><time datetime="{{ page.date }}">{{ page.date | date: "%d. %B %Y" }}</time>
     {% endif %}
-   {% include date-german.html %}
   </div>
-  {% include date-german.html %}
 
   <h1 class="post-title">{{ page.title }}</h1>
   <div class="post-line"></div>
