--- a/_includes/date-german.html
+++ b/_includes/date-german.html
@@ -1,15 +1,12 @@
-{% assign B = page.date | date: “%B” %}
-{% case B %}
-{% when ‘January’ %}Januar
-{% when ‘February’ %}Februar
-{% when ‘March’ %}März
-{% when ‘April’ %}April
-{% when ‘May’ %}Mai
-{% when ‘June’ %}Juni
-{% when ‘July’ %}Juli
-{% when ‘August’ %}August
-{% when ‘September’ %}September
-{% when ‘October’ %}Oktober
-{% when ‘November’ %}November
-{% when ‘December’ %}Dezember
-{% endcase %}
+{% assign formattedDate = '' %}
+
+{% if include.showDay %}
+    {% assign formattedDate = include.date | date: '%-d' | append: '. '%}
+{% endif %}
+
+{% assign monthNames = 'Januar,Februar,März,April,Mai,Juni,Juli,August,September,Oktober,November,Dezember' %}
+{% assign monthNames = monthNames | split: ',' %}
+{% assign month = include.date | date: '%-m' | minus: 1 %}
+
+{% assign formattedDate = formattedDate | append: monthNames[month] %}
+{% assign formattedDate = include.date | date: '%Y' | prepend: ' ' | prepend: formattedDate %}
