--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,10 @@ layout: default
       <br>
       <span>on&nbsp;</span><time datetime="{{ page.date }}">{{ page.date | date: "%d. %B %Y" }}</time>
     {% endif %}
+    
+    {% include date-german.html date=post.date %}
+Veröffentlichungsdatum: {{ formattedDate }}
+    
   </div>
 
   <h1 class="post-title">{{ page.title }}</h1>
