--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,9 +12,8 @@ layout: default
     {% endif %}
 
     {% if page.date %}
-    {% include date-german.html %}
       <br>
-      <span>on&nbsp;</span><time datetime="{{ page.date }}">{{ page.date }}</time>
+      <span>on&nbsp;</span><time datetime="{{ page.date }}">{% include date-german.html %}{{ page.date }}</time> 
     {% endif %}
     
   </div>
