--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
 
     {% if page.date %}
       <br>
-      <span>on&nbsp;</span><time datetime="{{ page.date }}">{% include date-german.html %}{{ page.date }}</time> 
+      <span>on&nbsp;</span><time datetime="{{ page.date }}">{% include date-german.html %}</time> 
     {% endif %}
     
   </div>
