--- a/_includes/date-german.html
+++ b/_includes/date-german.html
@@ -1,6 +1,6 @@
 <!-- Whitespace added for readability -->
 {% assign m = page.date | date: "%-m" %}
-{{ page.date | date: "%-d" }}
+{{ page.date | date: "%-d." }}
 {% case m %}
   {% when '1' %}Januar
   {% when '2' %}Februar
