--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
 
     {% if page.date %}
       <br>
-      <span>on</span><time datetime="{{ page.date | date: "%d. %B %Y"  }}">{% include date-german.html %}</time> 
+      <span>on</span><time datetime="{{ page.date }}">{% include date-german.html %}</time> 
     {% endif %}
     
   </div>
