--- a/_includes/catalogue_item.html
+++ b/_includes/catalogue_item.html
@@ -3,7 +3,9 @@
     {% if include.sticky == 'true' %}
     <span class="catalogue-pinned">Angeheftet &middot;</span>
     {% endif %}
-    <time datetime="{{ post.date }}" class="catalogue-time">{% include date-german.html %}</time> 
+    {% include date-german.html %}
+    <time datetime="{{ post.date }}" class="catalogue-time">{{ post.date | date: "%d. %B %Y" }}</time>
+    <time datetime="{{ post.date }}" class="catalogue-time">{{ post.date | date: "%d. %B %Y" }}{% include date-german.html %}</time> 
     <h1 class="catalogue-title">{{ post.title }}</h1>
     <div class="catalogue-line"></div>
 
