--- a/_includes/date-german.html
+++ b/_includes/date-german.html
@@ -1,5 +1,5 @@
 {% assign m = page.date | date: "%-m" %}
-{{ page.date | date: "%-d." }}
+{{ page.date | date: "%d." }}
 {% case m %}
   {% when '1' %}Januar
   {% when '2' %}Februar
@@ -18,7 +18,7 @@
 
 
 {% assign m = post.date | date: "%-m" %}
-{{ post.date | date: "%-d." }}
+{{ post.date | date: "%d." }}
 {% case m %}
   {% when '1' %}Januar
   {% when '2' %}Februar
