--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="post">
   <div class="post-info">
-    <span>Written by</span>
+    <span>Verfasst von</span>
     {% if page.author %}
         {{ page.author }}
     {% else %}
@@ -13,7 +13,7 @@ layout: default
 
     {% if page.date %}
       <br>
-      <span>on</span><time datetime="{{ page.date }}">{% include date-german.html %}</time> 
+      <span>am</span><time datetime="{{ page.date }}">{% include date-german.html %}</time> 
     {% endif %}
     
   </div>
@@ -36,5 +36,5 @@ layout: default
     <a href="{{ page.previous.url | prepend: site.baseurl }}" class="right arrow">&#8594;</a>
   {% endif %}
 
-  <a href="#" class="top">Top</a>
+  <a href="#" class="top">zum Anfang</a>
 </div>
