--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,5 +36,5 @@ layout: default
     <a href="{{ page.previous.url | prepend: site.baseurl }}" class="right arrow">&#8594;</a>
   {% endif %}
 
-  <a href="#" class="top">zum Anfang</a>
+  <a href="#" class="top">nach oben</a>
 </div>
