--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,6 +22,9 @@ layout: default
   <div class="post-line"></div>
 
   {{ content }}
+  
+  {% include related-posts.html %}
+  
 </div>
 
 {% if page.comments %}
