--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,8 @@
     &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> &middot; {{ site.author.name }}
   </span>
   
+  <i class="fa fa-stack-overflow"></i>
+  
         <ul>
           {% if site.social.email %}
             <li><a target="_blank" href="mailto:{{ site.social.email }}"><i class="fas fa-envelope"></i></a></li>
