--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <span>
     &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> &middot; {{ site.author.name }}
   </span>
-  
+  <i class="fab fa-github"></i>
   <a target="_blank" href="{{ site.social.github }}"><i class="fab fa-github"></i></a>   
   
 </footer>
