--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,8 @@
     &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> &middot; {{ site.author.name }}
   </span>
   <div style="height: 20px">
-  <i class="fab fa-github"></i>
-  <a target="_blank" href="{{ site.social.github }}"><i class="fab fa-github"></i></a>   
+  <i class="fas fa-github"></i>
+  <a target="_blank" href="{{ site.social.github }}"><i class="fas fa-github"></i></a>   
   </div>
   
 </footer>
