--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,9 +2,9 @@
   <span>
     &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> &middot; {{ site.author.name }}
   </span>
-  <div style="font-weight: 900">
-  <i class="fas fa-github"></i>
-  <a target="_blank" href="{{ site.social.github }}"><i class="fas fa-github"></i></a>   
+  <div style="font-size: 24px">
+    <i class="fas fa-github"></i>
+    <a target="_blank" href="{{ site.social.github }}"><i class="fas fa-github"></i></a>   
   </div>
   
 </footer>
