--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,7 @@
     &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> &middot; {{ site.author.name }}
   </span>
   <div style="font-size: 24px">
-    <i class="fas fa-github"></i>
-    <a target="_blank" href="{{ site.social.github }}"><i class="fas fa-github"></i></a>   
+    <a target="_blank" href="{{ site.social.github }}"><i class="ri-github-line ri-3x"></i></a>   
   </div>
   
 </footer>
