--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <span>
     &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> &middot; {{ site.author.name }}
   </span>
-  <div style="font-size: 24px">
+  <div>
     <a target="_blank" href="{{ site.social.github }}"><i class="ri-github-line ri-3x"></i></a>   
   </div>
   
