--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
   <span>
     &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> &middot; {{ site.author.name }}
   </span>
-  <div style="color: #000000">
-    <a target="_blank" href="{{ site.social.github }}"><i class="ri-github-line ri-2x"></i></a>   
+  <div>
+    <a style="color: #000000" target="_blank" href="{{ site.social.github }}"><i class="ri-github-line ri-2x"></i></a>   
   </div>
   
 </footer>
