--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,10 @@
 <footer>
-  <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <span>
     &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> &middot; {{ site.author.name }}
   </span>
   <div>
     <a style="color: #555" class="social-link" target="_blank" href="{{ site.social.github }}"><i class="ri-github-line ri-2x"></i></a>   
-    <a class="social-link" target="_blank" href="{{ site.social.reddit }}"><i class="ri-reddit-line ri-2x"></i></a>   
+    <a style="color: #555" class="social-link" target="_blank" href="{{ site.social.reddit }}"><i class="ri-reddit-line ri-2x"></i></a>   
   </div>
   
 </footer>
