--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
   </span>
   <div>
     <a style="color: #555" class="social-link" target="_blank" href="{{ site.social.github }}"><i class="ri-github-line ri-2x"></i></a>   
-    <a style="color: #555" class="social-link" target="_blank" href="{{ site.social.reddit }}"><i class="ri-reddit-line ri-2x"></i></a>   
+    <a style="color: #555" class="social-link" target="_blank" href="{{ site.social.reddit }}"><i class="ri-reddit-line ri-2x"></i></a>
+    <a style="color: #555" class="social-link" target="_blank" href="{{ site.social.email }}"><i class="ri-mail-send-line ri-2x"></i></a>
   </div>
-  
 </footer>
