--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,6 @@
   <div>
     <a style="color: #555" class="social-link" target="_blank" href="{{ site.social.github }}"><i class="ri-github-line ri-2x"></i></a> &nbsp;   
     <a style="color: #555" class="social-link" target="_blank" href="{{ site.social.reddit }}"><i class="ri-reddit-line ri-2x"></i></a> &nbsp; &nbsp;
-    <a style="color: #555" class="social-link" target="_blank" href="{{ site.social.email }}"><i class="ri-mail-send-line ri-2x"></i></a>
+    <a style="color: #555" class="social-link" target="_blank" href="{{ mailto:site.social.email }}"><i class="ri-mail-send-line ri-2x"></i></a>
   </div>
 </footer>
