--- a/_sass/tale/_layout.scss
+++ b/_sass/tale/_layout.scss
@@ -25,7 +25,7 @@ footer,
 
   &-title {
     @include transition(all .2s ease-out);
-    color: $default-color;
+    color: $default-shade;
     font-size: 2rem;
     display: inline-block;
     margin: 0;
@@ -33,7 +33,7 @@ footer,
 
     &:hover,
     &:focus {
-      opacity: .6;
+      opacity: .8;
     }
   }
 
