--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,9 +2,11 @@
   <span>
     &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> &middot; {{ site.author.name }}
   </span>
+  <div>
   <span>
-    <a style="color: #555" class="social-link" target="_blank" href="{{ site.social.github }}"><i class="ri-github-line ri-2x"></i></a> &nbsp;   
+    <a class="social-link" target="_blank" href="{{ site.social.github }}"><i class="ri-github-line ri-2x"></i></a> &nbsp;   
     <a style="color: #555" class="social-link" target="_blank" href="{{ site.social.reddit }}"><i class="ri-reddit-line ri-2x"></i></a> &nbsp; &nbsp;
     <a style="color: #555" class="social-link" target="_blank" href="mailto:{{ site.social.email }}"><i class="ri-mail-send-line ri-2x"></i></a>
   </span>
+    <div>
 </footer>
