--- a/_sass/tale/_pagination.scss
+++ b/_sass/tale/_pagination.scss
@@ -13,7 +13,7 @@
   .top {
     @include transition(all .3s ease-out);
     color: $default-color;
-    font-family: $sans-serif;
+    font-family: $serif-secondary;
     font-size: 1.1rem;
     opacity: .6;
 
