--- a/_includes/related-posts.html
+++ b/_includes/related-posts.html
@@ -23,7 +23,8 @@
 
       {% if sameTagCount >= minCommonTags %}
         {% if relatedPostsExist == false %}
-          <h3>Related posts:</h3>
+          <hr style="width: 50%">
+          <h3>Ähnliche Posts:</h3>
           <ul>
         {% endif %}
         {% assign relatedPostsExist = true %}
