--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
     <span>
       <a style="color: #555" class="social-link" target="_blank" href="{{ site.social.github }}"><i class="ri-github-line ri-2x"></i></a> &nbsp;   
       <a style="color: #555" class="social-link" target="_blank" href="{{ site.social.reddit }}"><i class="ri-reddit-line ri-2x"></i></a> &nbsp; &nbsp;
-      <a style="color: #555" class="social-link" target="_blank" href="../kontakt/"><i class="ri-mail-send-line ri-2x"></i></a> &nbsp;
+      <a style="color: #555" class="social-link" target="_blank" href="{{ site.url }}kontakt/"><i class="ri-mail-send-line ri-2x"></i></a> &nbsp;
       <a style="color: #555" class="social-link" target="_blank" href="{{ site.sponsoring.ko-fi }}"><i class="ri-cup-line ri-2x"></i></a>
     </span>
    <div>
