--- a/_sass/tale/_layout.scss
+++ b/_sass/tale/_layout.scss
@@ -47,6 +47,7 @@ footer,
   li {
     @include transition(all .2s ease-out);
     color: $default-color;
+    font-weight: bold;
     display: inline-block;
     opacity: .6;
     padding: 0 2rem 0 0;
