--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,10 +4,10 @@
   </span>
   <div style="margin-top: .3rem">
     <span>
-      <a style="color: #555" class="social-link" target="_blank" href="{{ site.social.github }}"><i class="ri-github-line ri-2x"></i></a> &nbsp;   
-      <a style="color: #555" class="social-link" target="_blank" href="{{ site.social.reddit }}"><i class="ri-reddit-line ri-2x"></i></a> &nbsp; &nbsp;
-      <a style="color: #555" class="social-link" target="_blank" href="{{ site.url }}/kontakt"><i class="ri-mail-send-line ri-2x"></i></a> &nbsp;
-      <a style="color: #555" class="social-link" target="_blank" href="{{ site.sponsoring.ko-fi }}"><i class="ri-cup-line ri-2x"></i></a>
+      <a style="color: #555" target="_blank" title="GitHub" href="{{ site.social.github }}"><i class="ri-github-line ri-2x"></i></a> &nbsp;   
+      <a style="color: #555" target="_blank" title="Reddit" href="{{ site.social.reddit }}"><i class="ri-reddit-line ri-2x"></i></a> &nbsp; &nbsp;
+      <a style="color: #555" target="_blank" title="Kontakt" href="{{ site.url }}/kontakt"><i class="ri-mail-send-line ri-2x"></i></a> &nbsp;
+      <a style="color: #555" target="_blank" title="Ko-fi" href="{{ site.sponsoring.ko-fi }}"><i class="ri-cup-line ri-2x"></i></a>
     </span>
    <div>
 </footer>
