--- a/_sass/tale/_layout.scss
+++ b/_sass/tale/_layout.scss
@@ -16,6 +16,8 @@ footer,
 .nav {
   box-shadow: 0 2px 2px -2px $shadow-color;
   overflow: auto;
+  max-width: 800px;
+  width: 80%;
 
   &-container {
     margin: 1rem auto;
