--- a/_sass/tale/_layout.scss
+++ b/_sass/tale/_layout.scss
@@ -16,6 +16,7 @@ footer,
 .nav {
   box-shadow: 0 2px 2px -2px $shadow-color;
   overflow: auto;
+  margin: 0 auto;
   max-width: 800px;
   width: 80%;
 
