--- a/_sass/tale/_layout.scss
+++ b/_sass/tale/_layout.scss
@@ -21,7 +21,7 @@ footer,
   width: 80%;
 
   &-container {
-    margin: 0 auto;
+    margin: 1rem auto;
     position: relative;
     text-align: center;
   }
