--- a/_sass/tale/_layout.scss
+++ b/_sass/tale/_layout.scss
@@ -5,7 +5,6 @@
 }
 
 main,
-footer,
 .nav-container {
   display: block;
   margin: 0 auto;
@@ -84,8 +83,12 @@ footer,
 
 footer {
   font-family: $serif-secondary;
+  box-shadow: 0 2px 2px -2px $shadow-color;
+  overflow: auto;
   padding: 2rem 0;
   text-align: center;
+  display: block;
+  margin: 0 auto;
 
   span {
     color: $default-color;
