--- a/_sass/tale/_layout.scss
+++ b/_sass/tale/_layout.scss
@@ -13,7 +13,7 @@ main,
 }
 
 .nav {
-  box-shadow: 0 2px 2px -2px $shadow-color;
+  box-shadow: 0 2px 2px -2px $blue;
   overflow: auto;
 
   &-container {
