--- a/_sass/tale/_pagination.scss
+++ b/_sass/tale/_pagination.scss
@@ -1,7 +1,7 @@
 .pagination {
   border-top: .5px solid $grey-2;
   font-family: $serif-secondary;
-  padding-top: 2rem;
+  padding: 1rem 0;
   position: relative;
   text-align: center;
 
