--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <span>
     &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> &middot; {{ site.author.name }}
   </span>
-  <div style="margin-top: .3rem">
+  <div class="footer-icons" style="margin-top: .3rem">
     <span>
       <a target="_blank" title="GitHub" href="{{ site.social.github }}"><i class="ri-github-line ri-2x"></i></a> &nbsp;   
       <a style="color: #555" target="_blank" title="Reddit" href="{{ site.social.reddit }}"><i class="ri-reddit-line ri-2x"></i></a> &nbsp; &nbsp;
