--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,6 +20,13 @@ layout: default
 
   <h1 class="post-title">{{ page.title }}</h1>
   <div class="post-line"></div>
+  
+  <div class="tags-clouds">
+    {% if post.tags.size > 0 %}
+      Tag{% if post.tags.size > 1 %}s{% endif %}:
+      {{ post.tags | sort | join: ", " }}
+    {% endif %}
+  </div>
 
   {{ content }}
   
