--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,6 +20,10 @@ layout: default
 
   <h1 class="post-title">{{ page.title }}</h1>
   <div class="post-line"></div>
+  
+  <div>
+    {{ post.tags | sort | join: ", " }}
+  </div>
 
   {{ content }}
   
