--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,10 @@ layout: default
   <div class="post-line"></div>
   
   <div>
-    {{ post.tags | sort | join: ", " }}
+    {% if post.tags.size > 0 %}
+      Tag{% if post.tags.size > 1 %}s{% endif %}:
+      {{ post.tags | sort | join: ", " }}
+    {% endif %}
   </div>
 
   {{ content }}
