--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,6 +21,8 @@ layout: default
   <h1 class="post-title">{{ page.title }}</h1>
   <div class="post-line"></div>
   
+  
+  
   {% for tag in site.tags %}
   <h3>{{ tag[0] }}</h3>
   <ul>
@@ -29,6 +31,15 @@ layout: default
     {% endfor %}
   </ul>
 {% endfor %}
+  
+  <span>[
+  {% for tag in page.tags %}
+    {% capture tag_name %}{{ tag }}{% endcapture %}
+    <a href="/tag/{{ tag_name }}"><code class="highligher-rouge"><nobr>{{ tag_name }}</nobr></code>&nbsp;</a>
+  {% endfor %}
+]</span>
+  
+  
 
   {{ content }}
   
