--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,21 +23,19 @@ layout: default
   
   
   
-  {% for tag in site.tags %}
-  <h3>{{ tag[0] }}</h3>
-  <ul>
-    {% for post in tag[1] %}
-      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
-{% endfor %}
-  
   <span>[
   {% for tag in page.tags %}
     {% capture tag_name %}{{ tag }}{% endcapture %}
-    <a href="/tag/{{ tag_name }}"><code class="highligher-rouge"><nobr>{{ tag_name }}</nobr></code>&nbsp;</a>
+    <code class="highligher-rouge"><nobr>{{ tag_name }}</nobr></code>
   {% endfor %}
 ]</span>
+  
+  <div>
+  {% if page.tags.size > 0 %}
+  Tag{% if page.tags.size > 1 %}s{% endif %}:
+  {{ page.tags | sort | join: ", " }}
+{% endif %}
+  </div>
   
   
 
