--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,6 +20,17 @@ layout: default
 
   <h1 class="post-title">{{ page.title }}</h1>
   <div class="post-line"></div>
+  
+  <div>
+  {% assign tags = page.tags | split:&nbsp; %}
+<ul>
+    {% for tag in tags %}
+    <li>{{ tag }}</li>
+    {% endfor %}
+</ul>
+  </div>
+  
+  
 
   {{ content }}
   
