--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,11 +22,10 @@ layout: default
   <div class="post-line"></div>
   
   <div>
-  {% assign tags = page.tags | split:&nbsp; %}
-<ul>
-    {% for tag in tags %}
-    <li>{{ tag }}</li>
-    {% endfor %}
+  <ul>
+  {% for tags in page.tags %}
+    <li>{{ tags }}</li>
+  {% endfor %}
 </ul>
   </div>
   
