--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,9 @@ layout: default
   <h1 class="post-title">{{ page.title }}</h1>
   <div class="post-line"></div>
   
-  
+  <div>
+    <a href="https://jakobhillebrand.github.io/derebus/tags/#{{ page.tags }}">{{ page.tags }}</a>
+  </div>
 
   {{ content }}
   
