--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,7 +30,7 @@ layout: default
     <a href="#{{ tag[0] }}">{{ tag[0] }}</a>
     {% endfor %}
   </div>
-  {% for tag in page.tags %}
+  <p>{% for tag in page.tags %}</p>
   
   
 
