--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,6 +31,25 @@ layout: default
     {% endfor %}
   </div>
   
+  <ul class="tags">
+  {% for tag in post.tags %}
+  <li class="weight-{{ tag.weight | round }}">
+    <a title="Site Tag: {{ tag }}" href="{{ tag.url | pretty }}">
+      {{ tag }}
+    </a>
+  </li>
+  {% endfor %}
+</ul>
+  
+  <ul class="tags">
+  {% for tag in page.tags %}
+  <li class="weight-{{ tag.weight | round }}">
+    <a title="Site Tag: {{ tag }}" href="{{ tag.url | pretty }}">
+      {{ tag }}
+    </a>
+  </li>
+  {% endfor %}
+</ul>
   
 
   {{ content }}
