--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,9 +21,20 @@ layout: default
   <h1 class="post-title">{{ page.title }}</h1>
   <div class="post-line"></div>
   
+  
+  
   <div class="tags-clouds">
-    <a href="{{ site.url }}/tags/#{{ page.tags }}">{{ page.tags }}</a>
+    {% for tag in site.tags %}
+    <a href="#{{ tag[0] }}">{{ tag[0] }}</a>
+    {% endfor %}
   </div>
+  
+  <div class="tags-clouds">
+  {% for tag in page.tags %}
+    <a title="{{ tag }}" href="{{ site.url }}/tags#{{ tag }}">{{ tag }}</a>
+  {% endfor %}
+</div>
+  
   
   <ul class="tags">
   {% for tag in page.tags %}
@@ -36,6 +47,7 @@ layout: default
 </ul>
   
 
+  
   {{ content }}
   
   {% include related-posts.html %}
