--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,7 +36,7 @@ layout: default
 </div>
   
   
-  <ul class="tags">
+  <ul class="tags-clouds">
   {% for tag in page.tags %}
   <li class="weight-{{ tag.weight | round }}">
     <a title="Site Tag: {{ tag }}" href="{{ site.url }}/tags#{{ tag }}">
