--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: default
   <h1 class="post-title">{{ page.title }}</h1>
   <div class="post-line"></div>
   
-  <div class="tags-clouds">
+  <div class="tags-clouds post-tags">
     {% for tag in page.tags %}
       <a title="{{ tag }}" href="{{ site.url }}/tags#{{ tag }}">{{ tag }}</a>
     {% endfor %}
