--- a/_sass/tale/_tags.scss
+++ b/_sass/tale/_tags.scss
@@ -19,6 +19,10 @@
   &-clouds {
     text-align: center;
     font-family: $sans-serif;
+    
+    .post-tags {
+      margin-bottom: 3rem;
+    }
 
     a {
       display: inline-block;
