--- a/_sass/tale/_layout.scss
+++ b/_sass/tale/_layout.scss
@@ -88,7 +88,7 @@ footer {
   padding: 1rem 0;
   text-align: center;
   display: block;
-  margin: .3rem auto 0;
+  margin: 1rem auto 0;
 
   span {
     color: $default-color;
