--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
     <span>
       <a target="_blank" title="GitHub" href="{{ site.social.github }}"><i class="ri-github-line ri-2x"></i></a> &nbsp;   
       <a target="_blank" title="Reddit" href="{{ site.social.reddit }}"><i class="ri-reddit-line ri-2x"></i></a> &nbsp; &nbsp;
-      <a target="_blank" title="Kontakt" href="{{ site.url }}/kontakt"><i class="ri-mail-send-line ri-2x"></i></a> &nbsp;
+      <a target="_blank" title="Kontakt" href="{{ '/kontakt' | prepend: site.baseurl }}"><i class="ri-mail-send-line ri-2x"></i></a> &nbsp;
       <a target="_blank" title="Ko-fi" href="{{ site.sponsoring.ko-fi }}"><i class="ri-cup-line ri-2x"></i></a>
     </span>
    <div>
