--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,7 +6,8 @@
     <ul>
       <li><a href="{{ site.baseurl }}/">Posts</a></li>
       <li><a href="{{ '/tags' | prepend: site.baseurl }}">Tags</a></li>
-      <li><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
+      <li><a href="{{ '/archiv' | prepend: site.baseurl }}">Archiv</a></li>
+      <li><a href="{{ '/der-autor' | prepend: site.baseurl }}">Der Autor</a></li>
     </ul>
   </div>
 </nav>
