--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,7 @@
 <nav class="nav">
   <div class="nav-container">
     <a href="{{ site.baseurl }}/">
+      <img src="/assets/favicon-750x750.png" alt="Logo">
       <h1 class="nav-title">{{ site.title }}</h1>
     </a>
     <ul>
