--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,8 +1,10 @@
 <nav class="nav">
   <div class="nav-container">
     <a href="{{ site.baseurl }}/">
+      <div style="display: inline-block">
       <img src="{{ '/assets/favicon-32x32.png' | prepend: site.baseurl }}" alt="Logo">
       <h1 class="nav-title">{{ site.title }}</h1>
+      </div>
     </a>
     <ul>
       <li><a href="{{ site.baseurl }}/">Posts</a></li>
