--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,8 +2,8 @@
   <div class="nav-container">
     <a href="{{ site.baseurl }}/">
       <div style="display: inline-block">
-      <img src="{{ '/assets/favicon-32x32.png' | prepend: site.baseurl }}" alt="Logo">
-      <h1 class="nav-title">{{ site.title }}</h1>
+      <img style="display: inline-block" src="{{ '/assets/favicon-32x32.png' | prepend: site.baseurl }}" alt="Logo">
+      <h1 style="display: inline-block" class="nav-title">{{ site.title }}</h1>
       </div>
     </a>
     <ul>
