--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,10 +1,8 @@
 <nav class="nav">
   <div class="nav-container">
     <a href="{{ site.baseurl }}/">
-      <div style="display: inline-block">
       <img style="display: inline-block" src="{{ '/assets/favicon-32x32.png' | prepend: site.baseurl }}" alt="Logo">
-      <h1 style="display: inline-block" class="nav-title">{{ site.title }}</h1>
-      </div>
+      <h1 class="nav-title">{{ site.title }}</h1>
     </a>
     <ul>
       <li><a href="{{ site.baseurl }}/">Posts</a></li>
