--- a/_sass/tale/_layout.scss
+++ b/_sass/tale/_layout.scss
@@ -65,6 +65,11 @@ main,
     font-family: $sans-serif;
     font-weight: bold;
   }
+  
+  .logo {
+    display: inline-block;
+    margin: 0;
+  }
 }
 
 @media (min-width: 600px) {
