--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,9 @@
 <nav class="nav">
   <div class="nav-container">
     <a href="{{ site.baseurl }}/">
-      <img class="logo" src="{{ '/assets/favicon-32x32.png' | prepend: site.baseurl }}" alt="Logo">
+      <div>
+        <img class="logo" src="{{ '/assets/favicon-32x32.png' | prepend: site.baseurl }}" alt="Logo">
+      </div>
       <h1 class="nav-title">{{ site.title }}</h1>
     </a>
     <ul>
