--- a/_sass/tale/_layout.scss
+++ b/_sass/tale/_layout.scss
@@ -68,11 +68,11 @@ main,
   
   .logo {
     display: inline-block;
-    margin: 0 0 -.3rem 0;
+    margin: 0 .3rem -.3rem 0;
   }
 }
 
-@media (min-width: 600px) {
+@media (min-width: 650px) {
   .nav {
     &-container {
       text-align: left;
