--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,4 +10,9 @@
       <a target="_blank" title="Ko-fi" href="{{ site.sponsoring.ko-fi }}"><i class="ri-cup-line ri-2x"></i></a>
     </span>
    <div>
+   <div>
+     <a href="https://internetdefenseleague.org">
+       <img src="https://internetdefenseleague.org/images/badges/final/footer_badge.png" alt="Member of The Internet Defense League"/>
+     </a>
+   </div>
 </footer>
