--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
       <a target="_blank" title="Kontakt" href="{{ '/kontakt' | prepend: site.baseurl }}"><i class="ri-mail-send-line ri-2x"></i></a> &nbsp;
       <a target="_blank" title="Ko-fi" href="{{ site.sponsoring.ko-fi }}"><i class="ri-cup-line ri-2x"></i></a>
       <a href="https://internetdefenseleague.org">
-        <img src="https://internetdefenseleague.org/images/badges/final/footer_badge.png" alt="Member of The Internet Defense League"/>
+        <img style="width: 2rem; height: 2rem" src="https://internetdefenseleague.org/images/badges/final/footer_badge.png" alt="Member of The Internet Defense League"/>
       </a>
     </span>
   </div>
