--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,8 +8,8 @@
       <a target="_blank" title="Reddit" href="{{ site.social.reddit }}"><i class="ri-reddit-line ri-2x"></i></a> &nbsp; &nbsp;
       <a target="_blank" title="Kontakt" href="{{ '/kontakt' | prepend: site.baseurl }}"><i class="ri-mail-send-line ri-2x"></i></a> &nbsp;
       <a target="_blank" title="Ko-fi" href="{{ site.sponsoring.ko-fi }}"><i class="ri-cup-line ri-2x"></i></a>
-      <a href="https://internetdefenseleague.org">
-        <img style="float: right" src="https://internetdefenseleague.org/images/badges/final/footer_badge.png" alt="Member of The Internet Defense League"/>
+      <a href="https://internetdefenseleague.org" style="float: right">
+        <img src="https://internetdefenseleague.org/images/badges/final/footer_badge.png" alt="Member of The Internet Defense League"/>
       </a>
     </span>
   </div>
