--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
   </div>
   <div class="icons">
     <span>
-      <a target="_blank" title="GitHub" href="{{ site.social.github }}"></a>
+      <a target="_blank" title="GitHub" href="{{ site.social.github }}">GitHub</a>
     </span>
   </div>
   <span>
