--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,8 @@
   </div>
   <div class="icons">
     <span>
-      <a target="_blank" title="GitHub" href="{{ site.social.github }}">GitHub</a>
+      <a target="_blank" title="GitHub" href="#">Kontakt</a>
+      <a target="_blank" title="GitHub" href="#">Impressum</a>
     </span>
   </div>
   <span>
