--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,13 +4,8 @@
       <a target="_blank" title="GitHub" href="{{ site.social.github }}"><i class="ri-github-line ri-2x"></i></a> &nbsp;   
       <a target="_blank" title="Reddit" href="{{ site.social.reddit }}"><i class="ri-reddit-line ri-2x"></i></a> &nbsp; &nbsp;
       <a target="_blank" title="Kontakt" href="{{ '/kontakt' | prepend: site.baseurl }}"><i class="ri-mail-send-line ri-2x"></i></a> &nbsp;
+      <a target="_blank" title="Impressum" href="{{ '/impressum' | prepend: site.baseurl }}"><i class="ri-information-line ri-2x"></i></a> &nbsp;
       <a target="_blank" title="Ko-fi" href="{{ site.sponsoring.ko-fi }}"><i class="ri-cup-line ri-2x"></i></a>
-    </span>
-  </div>
-  <div class="icons">
-    <span>
-      <a target="_blank" title="GitHub" href="#">Kontakt</a> &nbsp; &middot; &nbsp;
-      <a target="_blank" title="GitHub" href="#">Impressum</a>
     </span>
   </div>
   <span>
