--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav class="nav">
   <div class="nav-container">
     <a href="{{ site.baseurl }}/">
-      <img class="logo" src="{{ '/assets/favicon-750x750.png' | prepend: site.baseurl }}" alt="Logo">
+      <img class="logo" src="{{ '/assets/favicon-750x750.png' | prepend: site.baseurl }}" alt="Logo" width="40" height="40">
       <h1 class="nav-title">{{ site.title }}</h1>
     </a>
     <ul>
