--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,4 +13,7 @@
 
     {% include footer.html %}
   </body>
+  
+  <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.8.335/build/pdf.min.js"></script>
+  
 </html>
