--- a/_sass/tale/_base.scss
+++ b/_sass/tale/_base.scss
@@ -22,6 +22,23 @@ html {
 
 body {
   -webkit-text-size-adjust: 100%;
+  
+  ::-webkit-scrollbar {
+    width: 1em;
+  }
+ 
+  ::-webkit-scrollbar-track {
+      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  }
+ 
+  ::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+    
+    &:hover {
+      background: #555; 
+    }
+  } 
 }
 
 h1,
