--- a/_sass/tale/_base.scss
+++ b/_sass/tale/_base.scss
@@ -23,20 +23,20 @@ html {
 body {
   -webkit-text-size-adjust: 100%;
   
-  scrollbar-width: 1em;
+  scrollbar-width: 1rem;
   scrollbar-color: darkgrey;
   
   &::-webkit-scrollbar {
-    width: 1em;
+    width: 1rem;
   }
  
   &::-webkit-scrollbar-track {
-      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+      background: #F1F1F1;
   }
  
   &::-webkit-scrollbar-thumb {
     background-color: darkgrey;
-    outline: 1px solid slategrey;
+    outline: 3px solid slategrey;
     
     &:hover {
       background: #555; 
