--- a/_sass/tale/_base.scss
+++ b/_sass/tale/_base.scss
@@ -24,7 +24,7 @@ body {
   -webkit-text-size-adjust: 100%;
   
   scrollbar-width: 1rem;
-  scrollbar-color: darkgrey;
+  scrollbar-color: darkgrey #F1F1F1;
   
   &::-webkit-scrollbar {
     width: 1rem;
