--- a/_sass/tale/_base.scss
+++ b/_sass/tale/_base.scss
@@ -23,7 +23,7 @@ html {
 body {
   -webkit-text-size-adjust: 100%;
   
-  scrollbar-width: 1rem;
+  scrollbar-width: auto;
   scrollbar-color: darkgrey #F1F1F1;
   
   &::-webkit-scrollbar {
